no-ref: Fix cards spacing issue

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -75,7 +75,7 @@
 
 .cards > ul > li > .card-head .icon {
   width: 100%;
-  height: 164px;
+  height: auto;
 }
 
 .cards.cards.full-width > ul > li > .card-head .icon {
@@ -193,6 +193,7 @@
 
 .cards.cards.full-width > ul > li > .card-body > .card-section > p.button-container a {
   margin: 0;
+  margin-top: 16px;
 }
 
 .cards > ul > li > .card-body > .card-section > p.button-container:last-child a.button {
@@ -381,11 +382,6 @@
   }
 
   .cards.full-width > ul > li > .card-body > .card-section:not(.button-container) {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 24px;
-    max-width: 100%;
     margin: 0;
   }
 
